# anki_to_mp3

./: .gitignore  generate.py  pyproject.toml  word_list.txt
