[tool.poetry]
name = "anki_to_mp3"
version = "0.1.0"
description = ""
authors = ["Luke Marshall <lukasmarshall@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gtts = "^2.1.1"
pydub = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
